# ESP32-C6_ESP-IDF_COMPONENTS

./: .gitlab-ci.yml  CMakeLists copy.txt  CMakeLists.txt  ESP-IDF Component Registry.txt  ESP32-S3_ESP-IDF_COMPONENTS.code-workspace  README.md  esp32-s3_esp-idf_components  esp32-s3_esp-idf_components_doxygen  platformio.ini  post_build.py  sdkconfig  sdkconfig.esp32s3box  sdkconfig.esp32s3box.old  test.txt  update_version.ps1  version_control.txt
components/peripherals/: CMakeLists.txt  README.md
components/peripherals/adc/: README.md
components/peripherals/adc/esp_s12sd/: CMakeLists.txt  README.md  idf_component.yml  library.json  s12sd.c  s12sd.h
components/peripherals/adc/esp_s12sd/include/: s12sd.h  s12sd_version.h
components/peripherals/i2c/: README.md
components/peripherals/i2c/esp_ahtxx/: CMakeLists.txt  README.md  ahtxx.c  ahtxx.h  ahtxx_version.h  idf_component.yml  library.json
components/peripherals/i2c/esp_ahtxx/include/: ahtxx.h  ahtxx_version.h
components/peripherals/i2c/esp_ak8975/: CMakeLists.txt  README.md  ak8975.c  ak8975.h  idf_component.yml  library.json
components/peripherals/i2c/esp_ak8975/include/: ak8975.h  ak8975_version.h
components/peripherals/i2c/esp_as3935/: CMakeLists.txt  README.md  as3935.c  as3935.h  idf_component.yml  library.json
components/peripherals/i2c/esp_as3935/include/: as3935.h  as3935_version.h
components/peripherals/i2c/esp_as7341/: CMakeLists.txt  README.md  as7341.c  as7341.h  idf_component.yml  library.json
components/peripherals/i2c/esp_as7341/include/: as7341.h  as7341_version.h
components/peripherals/i2c/esp_at24cxxx/: CMakeLists.txt  README.md  at24cxxx.c  idf_component.yml  library.json
components/peripherals/i2c/esp_at24cxxx/include/: at24cxxx.h  at24cxxx_version.h
components/peripherals/i2c/esp_bh1750/: CMakeLists.txt  README.md  bh1750.c  bh1750.h  idf_component.yml  library.json
components/peripherals/i2c/esp_bh1750/include/: bh1750.h  bh1750_version.h
components/peripherals/i2c/esp_bme680/: CMakeLists.txt  README.md  bme680.c  idf_component.yml  library.json
components/peripherals/i2c/esp_bme680/include/: bme680.h  bme680_version.h
components/peripherals/i2c/esp_bmp280/: CMakeLists.txt  README.md  bmp280.c  bmp280.h  idf_component.yml  library.json
components/peripherals/i2c/esp_bmp280/include/: bmp280.h  bmp280_version.h
components/peripherals/i2c/esp_bmp390/: CMakeLists.txt  README.md  bmp390.c  bmp390.h  idf_component.yml  library.json
components/peripherals/i2c/esp_bmp390/include/: bmp390.h  bmp390_version.h
components/peripherals/i2c/esp_ccs811/: CMakeLists.txt  README.md  ccs811.c  ccs811.h  idf_component.yml  library.json
components/peripherals/i2c/esp_ccs811/include/: ccs811.h  ccs811_version.h
components/peripherals/i2c/esp_driver_i2c_ext/: CMakeLists.txt  README.md  i2c_master_ext.c  i2c_master_ext.h  idf_component.yml  library.json
components/peripherals/i2c/esp_driver_i2c_ext/include/: i2c_master_ext.h  i2c_master_ext_version.h
components/peripherals/i2c/esp_ens160/: CMakeLists.txt  README.md  ens160.c  ens160.h  idf_component.yml  library.json
components/peripherals/i2c/esp_ens160/include/: ens160.h  ens160_version.h
components/peripherals/i2c/esp_hdc1080/: CMakeLists.txt  README.md  hdc1080.c  hdc1080.h  idf_component.yml  library.json
components/peripherals/i2c/esp_hdc1080/include/: hdc1080.h  hdc1080_version.h
components/peripherals/i2c/esp_hmc5883l/: CMakeLists.txt  README.md  hmc5883l.c  hmc5883l.h  idf_component.yml  library.json
components/peripherals/i2c/esp_hmc5883l/include/: hmc5883l.h  hmc5883l_version.h
components/peripherals/i2c/esp_ina226/: README.md  idf_component.yml  ina226.c
components/peripherals/i2c/esp_ina226/include/: ina226.h  ina226_version.h
components/peripherals/i2c/esp_ina228/: CMakeLists.txt  README.md  idf_component.yml  ina228.c  library.json
components/peripherals/i2c/esp_ltr390uv/: CMakeLists.txt  README.md  idf_component.yml  library.json  ltr390uv.c  ltr390uv.h
components/peripherals/i2c/esp_max30105/: CMakeLists.txt  idf_component.yml  max30105.c  max30105.h
components/peripherals/i2c/esp_mlx90614/: CMakeLists.txt  README.md  idf_component.yml  library.json  mlx90614.c  mlx90614.h
components/peripherals/i2c/esp_mmc56x3/: CMakeLists.txt  README.md  idf_component.yml  library.json  mmc56x3.c  mmc56x3.h
components/peripherals/i2c/esp_mpu6050/: CMakeLists.txt  README.md  idf_component.yml  library.json  mpu6050.c  mpu6050.h
components/peripherals/i2c/esp_pct2075/: CMakeLists.txt  pct2075.c
components/peripherals/i2c/esp_sgp4x/: CMakeLists.txt  README.md  idf_component.yml  library.json  sgp4x.c  sgp4x.h
components/peripherals/i2c/esp_sgp4x/include/: sgp4x.h  (+1 more)
components/peripherals/i2c/esp_sht4x/: CMakeLists.txt  README.md  idf_component.yml  library.json  sht4x.c  sht4x.h
components/peripherals/i2c/esp_ssd1306/: CMakeLists.txt  README.md  font8x8_latin.h  idf_component.yml  library.json  ssd1306.c  ssd1306.h
components/peripherals/i2c/esp_tbi2cxxx/: tbi2cxxx.c
components/peripherals/i2c/esp_tlv493d/: CMakeLists.txt  tlv493d.c  tlv493d.h
components/peripherals/i2c/esp_veml6040/: CMakeLists.txt  README.md  idf_component.yml  library.json  veml6040.c
components/peripherals/i2c/esp_veml7700/: CMakeLists.txt  README.md  idf_component.yml  library.json  veml7700.c  veml7700.h
components/peripherals/owb/: README.md
components/peripherals/owb/esp_ds18b20/: CMakeLists.txt  README.md  ds18b20.c  ds18b20.h  idf_component.yml  library.json
components/peripherals/spi/: README.md
components/peripherals/spi/esp_max31865/: CMakeLists.txt  max31865.c  max31865.h
components/utilities/esp_type_utils/: CMakeLists.txt  README.md  idf_component.yml  library.json  type_utils.c  type_utils.h
components/utilities/esp_type_utils/include/: type_utils.h  type_utils_version.h  version.h
components/utilities/esp_uuid/: CMakeLists.txt  README.md  gemini_edits.txt  idf_component.yml  library.json  uuid copy.c  uuid.c
components/utilities/esp_uuid/include/: idf_component.yml.in  uuid.h  uuid_version.h
(+3629 files in other folders)
